--- a/index.html
+++ b/index.html
@@ -250,6 +250,19 @@
         </div>
     </div>
     </div>
+    <footer class="fixed-bottom text-center text-white">
+        <div class="container-fluid p-3 bg-primary-color">
+            <section>
+                <a class="btn btn-floating text-white m-1" href="#!" role="button" data-mdb-ripple-color="white"><i
+                        class="fab fa-facebook-f fa-2x"></i></a>
+                <a class="btn btn-floating text-white m-1" href="#!" role="button" data-mdb-ripple-color="white"><i
+                        class="fab fa-github fa-3x"></i></a>
+                <a class="btn btn-floating text-white m-1" href="#!" role="button" data-mdb-ripple-color="white"><i
+                        class="fab fa-instagram fa-3x"></i></a>
+            </section>
+        </div>
+        <div class="container-fluid bg-secondary-color p-1">© Equipo 3</div>
+    </footer>
     <!-- Script Datatables -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
