--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <a class="items-offcanvas">CLIENTES</a>
                     <a class="items-offcanvas">PRODUCTOS</a>
                     <a class="items-offcanvas">VENTAS</a>
-                    <a class="items-offcanvas">CONSODILACION</a>
+                    <a class="items-offcanvas">CONSOLIDACION</a>
                 </div>
             </div>
         </nav>
