--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="offcanvas-header">
                     <img class="offcanvas-title" id="offcanvasWithBackdropLabel" src="./logovargas3.svg"
                         width="100px" />
-                    <button type="button" class="btn" data-mdb-dismiss="offcanvas" aria-label="Close">
+                    <button type="button" class="btn boxshadow" data-mdb-dismiss="offcanvas" aria-label="Close">
                         <i class="fas fa-times fa-2x"></i>
                     </button>
                 </div>
